[package]
name = "rua_engine"
version = "0.1.0"
authors = ["fjhg19930505 <ziyoulu1993@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protoc-rust = "2.16.2"
mysql = "18.2.0"

rua_value_list = { git = "https://github.com/fjhg19930505/rua_value_list.git" }
rua_net_mgr = { git = "https://github.com/fjhg19930505/rua_net_mgr.git" }
time = "0.2.16"
url = "2.1.1"
